# rust-mini-c

./: Cargo.toml  Makefile  test.c  test.s
src/: common.rs  lexer.rs  lib.rs  main.rs  mini-c.pest  parser.rs  typer.rs  utils.rs
src/coloring/: mod.rs  structure.rs
src/ertl/: error.rs  mod.rs
src/ertl/liveness/: error.rs  mod.rs  structure.rs
src/ertl/structure/: mod.rs  register.rs
src/interference/: mod.rs  structure.rs
src/interpreter/: mod.rs  rtl.rs  typer.rs
src/interpreter/rtl/: context.rs  default.rs  error.rs  mod.rs
src/interpreter/typer/: bool.rs  context.rs  defaults.rs  mod.rs
src/linearise/: context.rs  error.rs  mod.rs  x86_64.rs
src/liveness/: error.rs  mod.rs  structure.rs
src/ltl/: context.rs  error.rs  mod.rs  structure.rs
src/parser/: error.rs  lexer.rs  mod.rs  structure.rs
src/rtl/: error.rs  mod.rs
src/rtl/interpreter/: context.rs  default.rs  error.rs  mod.rs
src/rtl/structure/: graph.rs  label.rs  mod.rs  register.rs
src/typer/: context.rs  error.rs  mod.rs  structure.rs
src/typer/interpreter/: context.rs  defaults.rs  error.rs  mod.rs
tests/: exec.rs  interp_typer.rs  parser.rs  rtl_interpreter.rs  syntax.rs  typer.rs  typer_interpreter.rs
tests/exec/: abr.c  dllist.c  pascal.c
tests/source/: LISEZMOI  run
tests/source/exec/: abr.c  abr.out  abr.s  and1.c  and1.out  and1.s  and2.c  and2.s  arith1.c  arith1.s  assign1.c  assign1.s  assign2.c  assign2.s  assign3.c  assign6.c  assign6.out  assign6.s  assign7.c  assign7.s  block1.c  block1.s  (+112 more)
tests/source/exec-fail/: deref_null.c  division_by_zero1.c
(+73 files in other folders)
