[package]
name = "rust-mini-c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
logos = "0.12.1"
parse_int = { version = "0.5", features = ["implicit-octal"] }
logos-nom-bridge = "0.1.0"
derive-getters = "0.2.0"
derive-new = "0.5"
itertools = "0.10.5"

